fixed image alignment

--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,43 @@
 .container {
-    margin-top: 50px; 
-  }
- body{
+    margin-top: 50px;
+}
+
+body {
+
     
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #tableContainer {
-    overflow-x: auto; 
-  }
-  table {
-    width: 100%; 
+    overflow-x: auto;
+}
+
+table {
+    width: 100%;
     border-collapse: collapse;
-  }
-  th, td {
+}
+
+th,
+td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
-  }
- 
-#uploadFormContainer  {
+}
+
+#uploadForm {
     width: 100%;
-    max-width: 400px; 
+    max-width: 400px;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8); 
+
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  #excelImage {
-    position: absolute; 
-    top: 20px;
-    left: 20px; 
-    width: 100px; 
-    z-index: -1;
-  }
+}
+
+#profilePic 
+{ 
+    max-width: 100px;
+     height: auto;
+}
